<resources>
    <string name="str_input_source_title">Source</string>
    <string-array name="str_arr_input_source_vals">
        <item>VGA</item>
        <item>ATV</item>
        <item>CVBS</item>
        <item>CVBS2</item>
        <item>CVBS3</item>
        <item>CVBS4</item>
        <item>CVBS5</item>
        <item>CVBS6</item>
        <item>CVBS7</item>
        <item>CVBS8</item>
        <item>CVBS_MAX</item>
        <item>SVIDEO</item>
        <item>SVIDEO2</item>
        <item>SVIDEO3</item>
        <item>SVIDEO4</item>
        <item>SVIDEO_MAX</item>
        <item>YPBPR1</item>
        <item>YPBPR2</item>
        <item>YPBPR3</item>
        <item>YPBPR_MAX</item>
        <item>SCART</item>
        <item>SCART2</item>
        <item>SCART_MAX</item>
        <item>HDMI1</item>
        <item>HDMI2</item>
        <item>HDMI3</item>
        <item>HDMI4</item>
        <item>HDMI_MAX</item>
        <item>DTV</item>
        <item>DVI</item>
        <item>DVI2</item>
        <item>DVI3</item>
        <item>DVI4</item>
        <item>DVI_MAX</item>
        <item>STORAGE</item>
        <item>KTV</item>
        <item>JPEG</item>
        <item>DTV2</item>
        <item>STORAGE2</item>
        <item>DIV3</item>
        <item>SCALER_OP</item>
        <item>RUV</item>
        <item>VGA2</item>
        <item>VGA3</item>
    </string-array>
    <string-array name="str_arr_atsc_input_source_vals">
        <item>VGA</item>
        <item></item>
        <item>CVBS</item>
        <item>CVBS2</item>
        <item>CVBS3</item>
        <item>CVBS4</item>
        <item>CVBS5</item>
        <item>CVBS6</item>
        <item>CVBS7</item>
        <item>CVBS8</item>
        <item>CVBS_MAX</item>
        <item>SVIDEO</item>
        <item>SVIDEO2</item>
        <item>SVIDEO3</item>
        <item>SVIDEO4</item>
        <item>SVIDEO_MAX</item>
        <item>YPBPR1</item>
        <item>YPBPR2</item>
        <item>YPBPR3</item>
        <item>YPBPR_MAX</item>
        <item>SCART</item>
        <item>SCART2</item>
        <item>SCART_MAX</item>
        <item>HDMI1</item>
        <item>HDMI2</item>
        <item>HDMI3</item>
        <item>HDMI4</item>
        <item>HDMI_MAX</item>
        <item>TV</item>
        <item>DVI</item>
        <item>DVI2</item>
        <item>DVI3</item>
        <item>DVI4</item>
        <item>DVI_MAX</item>
        <item>STORAGE</item>
        <item>KTV</item>
        <item>JPEG</item>
        <item>DTV2</item>
        <item>STORAGE2</item>
        <item>DIV3</item>
        <item>SCALER_OP</item>
        <item>RUV</item>
        <item>VGA2</item>
        <item>VGA3</item>
    </string-array>
    <string-array name="str_arr_idsb_input_source_vals">
        <item>VGA</item>
        <item>CABLE</item>
        <item>CVBS</item>
        <item>CVBS2</item>
        <item>CVBS3</item>
        <item>CVBS4</item>
        <item>CVBS5</item>
        <item>CVBS6</item>
        <item>CVBS7</item>
        <item>CVBS8</item>
        <item>CVBS_MAX</item>
        <item>SVIDEO</item>
        <item>SVIDEO2</item>
        <item>SVIDEO3</item>
        <item>SVIDEO4</item>
        <item>SVIDEO_MAX</item>
        <item>YPBPR1</item>
        <item>YPBPR2</item>
        <item>YPBPR3</item>
        <item>YPBPR_MAX</item>
        <item>SCART</item>
        <item>SCART2</item>
        <item>SCART_MAX</item>
        <item>HDMI1</item>
        <item>HDMI2</item>
        <item>HDMI3</item>
        <item>HDMI4</item>
        <item>HDMI_MAX</item>
        <item>AIR</item>
        <item>DVI</item>
        <item>DVI2</item>
        <item>DVI3</item>
        <item>DVI4</item>
        <item>DVI_MAX</item>
        <item>STORAGE</item>
        <item>KTV</item>
        <item>JPEG</item>
        <item>DTV2</item>
        <item>STORAGE2</item>
        <item>DIV3</item>
        <item>SCALER_OP</item>
        <item>RUV</item>
        <item>VGA2</item>
        <item>VGA3</item>
    </string-array>
    <string name="str_auto_adjust">Auto Adjust</string>
    <string name="app_name">Tvsetting</string>
    <string name="str_pic_picture_adjustment">Imageadjust</string>
    <string name="str_pic_picture">Picture</string>
    <string name="str_pic_picturemode">Picture Mode</string>
    <string-array name="str_arr_pic_picturemode_vals">
        <item>lightness</item>
        <item>standard</item>
        <item>soft</item>
        <item>user</item>
        <item>game</item>
        <item>auto</item>
        <item>pc</item>
        <item>vivid</item>
        <item>natural</item>
        <item>sports</item>
    </string-array>
    <string name="str_pic_contrast">Contrast</string>
    <string name="str_pic_brightness">Brightness</string>
    <string name="str_pic_color">Color</string>
    <string name="str_pic_sharpness">Sharpness</string>
    <string name="str_pic_hue">Hue</string>
    <string name="str_pic_saturation">Saturation</string>
    <string name="str_pic_backlight">Back Light</string>
    <string name="str_pic_colortemperature">Color Temperature</string>
    <string-array name="str_arr_pic_colortemperature_vals">
        <item>cold</item>
        <item>nature</item>
        <item>warm</item>
        <item>user</item>
    </string-array>
    <string name="str_pic_colortemperature_red">Red</string>
    <string name="str_pic_colortemperature_green">Green</string>
    <string name="str_pic_colortemperature_blue">Blue</string>
    <string name="str_pic_zoommode">Zoom Mode</string>
    <string-array name="str_arr_pic_zoommode_vals">
        <item>Default</item>
        <item>16:9</item>
        <item>4:3</item>
        <item>Auto</item>
        <item>Panorama Mode</item>
        <item>Just Scan</item>
        <item>Zoom1</item>
        <item>Zoom2</item>
        <item>14:9</item>
        <item>P2P</item>
        <item>Subtitle</item>
        <item>Movie</item>
        <item>Personal</item>
        <item>4x3_PanScan</item>
        <item>4x3_LetterBox</item>
        <item>16x9_PillarBox</item>
        <item>16x9_PanScan</item>
        <item>4x3_Combind</item>
        <item>16x9_Combind</item>
        <item>Zoom_2x</item>
        <item>Zoom_3x</item>
        <item>Zoom_4x</item>
    </string-array>
    <string name="str_pic_imgnoisereduction">Image Noise Reduction</string>
    <string name="str_pic_mpegnoisereduction">MPEG Noise Reduction</string>
    <string-array name="str_arr_pic_imgnoisereduction_vals">
        <item>Off</item>
        <item>Weak</item>
        <item>Middle</item>
        <item>Strong</item>
        <item>Auto</item>
    </string-array>
    <string-array name="str_arr_pic_mpegnoisereduction_vals">
        <item>Off</item>
        <item>Weak</item>
        <item>Middle</item>
        <item>Strong</item>
    </string-array>
    <string-array name="str_arr_sleep_mode_vals">
        <item>Off</item>
        <item>10 Minute</item>
        <item>20 Minute</item>
        <item>30 Minute</item>
        <item>60 Minute</item>
        <item>90 Minute</item>
        <item>120 Minute</item>
        <item>180 Minute</item>
        <item>240 Minute</item>
    </string-array>
    <string-array name="str_arr_pvr_mode_vals">
        <item>Off</item>
        <item>On</item>
    </string-array>
    <string name="str_pic_pcimagemode">PC Image Mode</string>
    <string name="str_pic_autotune">Auto Tune</string>
    <string name="str_set_hdmicec_arc">HDMI_ARC</string>
    <string name="str_pic_pcimagemode_waiting">PC image is adjusting, please try later...</string>
    <string name="str_pic_pcimagemode_success">PC image adjusted success</string>
    <string name="str_pic_pcimagemode_failed">PC image adjusted fail</string>
    <string name="str_pic_clock">Clock</string>
    <string name="str_pic_phase">Phase</string>
    <string name="str_pic_horizontal_pos">Horizontal Position</string>
    <string name="str_pic_vertical_pos">Vertical Position</string>
    <string name="str_sound_sound_adjustment">Sound</string>
    <string name="str_sound_soundmode">Sound Mode</string>
    <string-array name="str_arr_sound_soundmode_vals">
        <item>Standard</item>
        <item>Music</item>
        <item>Movie</item>
        <item>Sports</item>
        <item>User</item>
    </string-array>
    <string name="str_sound_bass">Low Pitch</string>
    <string name="str_sound_treble">High Pitch</string>
    <string name="str_sound_equalizer">Equilizer</string>
    <string name="str_sound_equalizer120hz">120Hz</string>
    <string name="str_sound_equalizer500hz">500Hz</string>
    <string name="str_sound_equalizer1.5khz">1.5KHz</string>
    <string name="str_sound_equalizer5khz">5KHz</string>
    <string name="str_sound_equalizer10khz">10KHz</string>
    <string name="str_sound_balance">Balance</string>
    <string name="str_sound_avc">AVC</string>
    <string name="str_sound_ad">AD Switch</string>
    <string name="str_sound_ad_volume">AD Volume</string>
    <string name="str_sound_autohoh">Auto HOH</string>
    <string name="str_sound_truehdbypass">Dolby TrueHD/DTS-HD</string>
    <string name="str_sound_srs">SRS</string>
    <string-array name="str_arr_sound_avc_vals">
        <item>Off</item>
        <item>On</item>
    </string-array>
    <string name="str_sound_surround">Surround</string>
    <string-array name="str_arr_sound_surround_vals">
        <item>Off</item>
        <item>On</item>
    </string-array>
    <string name="str_sound_spdifoutput">SPDIF Output</string>
    <string-array name="str_arr_sound_spdifoutput_vals">
        <item>PCM</item>
        <item>OFF</item>
        <item>RAW</item>
    </string-array>
    <string name="str_sound_separatehear">Alone</string>
    <string-array name="str_arr_sound_separatehear_vals">
        <item>Off</item>
        <item>On</item>
    </string-array>
    <string name="str_3d_3d">3D</string>
    <string name="str_3d_self_adaptive_detecttriple">3D Self Detect</string>
    <string-array name="str_arr_3d_self_adaptive_detecttriple_vals">
        <item>Off</item>
        <item>Right Now</item>
        <item>When Source Change</item>
        <item>Real Time</item>
    </string-array>
    <string name="str_3dto2d_self_adaptive_detecttriple">3D-2D Self Detect</string>
    <string-array name="str_arr_3dto2d_self_adaptive_detecttriple_vals">
        <item>Off</item>
        <item>Right Now</item>
    </string-array>
    <string name="str_3d_self_adaptive_detectlevel">SelfAdaptive Level</string>
    <string-array name="str_arr_3d_self_adaptive_detectlevel_vals">
        <item>Low</item>
        <item>Middle</item>
        <item>High</item>
    </string-array>
    <string name="str_3d_conversion">3D Conversion</string>
    <string-array name="str_arr_3d_3dconversion_vals">
        <item>None</item>
        <item>SBS</item>
        <item>TB</item>
        <item>FP</item>
        <item>LA</item>
        <item>2D-3D</item>
        <item>Auto</item>
        <item>CB</item>
        <item>PA</item>
        <item>FA</item>
    </string-array>
    <string name="str_3d_3dto2d">3Dto2D</string>
    <string-array name="str_arr_3d_3dto2d_vals">
        <item>None</item>
        <item>SBS</item>
        <item>TB</item>
        <item>FP</item>
        <item>LA</item>
        <item>FA</item>
        <item>Auto</item>
        <item>CB</item>
        <item>PA</item>
    </string-array>
    <string name="str_3d_3ddepth">3D Depth</string>
</resources>