<?xml version="1.0" encoding="utf-8"?>


<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/sound_sty_menu"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
	<include layout="@layout/layout_icon_bar_sound" />
	<!--
    <com.mstar.tv.tvplayer.ui.component.CycleScrollView
    
        android:orientation="vertical"
        android:layout_width="720dp"
        android:layout_height="420dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="200dp">
        -->
        <LinearLayout
           android:orientation="vertical"
           android:layout_width="1dp"
           android:layout_height="550dp"
           android:layout_weight="1"
           android:layout_marginTop="20dp">
            <!-- For Sound Mode -->
            <LinearLayout
                android:id="@+id/linearlayout_sound_soundmode"
                style="@style/sound_sty_combo_btn">
                <ImageView style="@style/sound_sty_leftarrow"></ImageView>
                <TextView
                    style="@style/sound_sty_combo_name"
                    android:text="@string/str_sound_soundmode" />
                <TextView style="@style/sound_sty_combo_indicator" />
                <ImageView style="@style/sound_sty_rightarrow"></ImageView>
            </LinearLayout>
            <!-- For Bass -->
            <LinearLayout
                android:id="@+id/linearlayout_sound_bass"
                style="@style/sound_sty_seekbar_btn">
                <TextView
                    style="@style/sound_sty_seekbar_name"
                    android:text="@string/str_sound_bass" />
                <TextView style="@style/sound_sty_seekbar_indicator" />
                <SeekBar style="@style/sound_sty_bar" />
            </LinearLayout>

            <!-- For Treble -->
            <LinearLayout
                android:id="@+id/linearlayout_sound_treble"
                style="@style/sound_sty_seekbar_btn">
                <TextView
                    style="@style/sound_sty_seekbar_name"
                    android:text="@string/str_sound_treble" />
                <TextView style="@style/sound_sty_seekbar_indicator" />
                <SeekBar style="@style/sound_sty_bar" />
            </LinearLayout>

            <!-- for Equalizer -->
            <LinearLayout
                android:id="@+id/linearlayout_sound_equalizer"
                style="@style/button_style"
                android:visibility="gone">
                <TextView
                    style="@style/button_textview_style"
                    android:text="@string/str_sound_equalizer" />
            </LinearLayout>

            <!-- For Balance -->
            <LinearLayout
                android:id="@+id/linearlayout_sound_balance"
                style="@style/sound_sty_seekbar_btn">
                <TextView
                    style="@style/sound_sty_seekbar_name"
                    android:text="@string/str_sound_balance" />
                <TextView style="@style/sound_sty_seekbar_indicator" />
                <SeekBar style="@style/sound_sty_bar" />
            </LinearLayout>

            <!-- For AVC -->
            <LinearLayout
                android:id="@+id/linearlayout_sound_avc"
                style="@style/sound_sty_combo_btn"
                android:visibility="gone">
                <ImageView style="@style/sound_sty_leftarrow"></ImageView>
                <TextView
                    style="@style/sound_sty_combo_name"
                    android:text="@string/str_sound_avc" />
                <TextView style="@style/sound_sty_combo_indicator" />
                <ImageView style="@style/sound_sty_rightarrow"></ImageView>
            </LinearLayout>

            <!-- For AD -->
            <LinearLayout
                android:id="@+id/linearlayout_sound_ad"
                style="@style/sound_sty_combo_btn"
                android:visibility="gone">
                <ImageView style="@style/sound_sty_leftarrow"></ImageView>
                <TextView
                    style="@style/sound_sty_combo_name"
                    android:text="@string/str_sound_ad" />
                <TextView style="@style/sound_sty_combo_indicator" />
                <ImageView style="@style/sound_sty_rightarrow"></ImageView>
            </LinearLayout>

            <!-- For AD Volume -->
            <LinearLayout
                android:id="@+id/linearlayout_sound_ad_volume"
                style="@style/sound_sty_seekbar_btn"
                android:visibility="gone">
                <TextView
                    style="@style/sound_sty_seekbar_name"
                    android:text="@string/str_sound_ad_volume" />
                <TextView style="@style/sound_sty_seekbar_indicator" />
                <SeekBar style="@style/sound_sty_bar" />
            </LinearLayout>

             <!-- For HOH -->
            <LinearLayout
                android:id="@+id/linearlayout_sound_hoh"
                style="@style/sound_sty_combo_btn"
                android:visibility="gone">
                <ImageView style="@style/sound_sty_leftarrow"></ImageView>
                <TextView
                    style="@style/sound_sty_combo_name"
                    android:text="@string/str_sound_autohoh" />
                <TextView style="@style/sound_sty_combo_indicator" />
                <ImageView style="@style/sound_sty_rightarrow"></ImageView>
            </LinearLayout>

             <!-- For HDByPass -->
            <LinearLayout
                android:id="@+id/linearlayout_sound_hdbypass"
                style="@style/sound_sty_combo_btn"
                android:visibility="gone">
                <ImageView style="@style/sound_sty_leftarrow"></ImageView>
                <TextView
                    style="@style/sound_sty_combo_name"
                    android:text="@string/str_sound_truehdbypass" />
                <TextView style="@style/sound_sty_combo_indicator" />
                <ImageView style="@style/sound_sty_rightarrow"></ImageView>
            </LinearLayout>

            <!-- For Surround -->
            <LinearLayout
                android:id="@+id/linearlayout_sound_surround"
                style="@style/sound_sty_combo_btn"
                android:visibility="gone">
                <ImageView style="@style/sound_sty_leftarrow"></ImageView>
                <TextView
                    style="@style/sound_sty_combo_name"
                    android:text="@string/str_sound_surround" />
                <TextView style="@style/sound_sty_combo_indicator" />
                <ImageView style="@style/sound_sty_rightarrow"></ImageView>
            </LinearLayout>

            <!-- For SRS -->
            <LinearLayout
                android:id="@+id/linearlayout_sound_srs"
                style="@style/sound_sty_combo_btn"
                android:visibility="gone">
                <ImageView style="@style/sound_sty_leftarrow"></ImageView>
                <TextView
                    style="@style/sound_sty_combo_name"
                    android:text="@string/str_sound_srs" />
                <TextView style="@style/sound_sty_combo_indicator" />
                <ImageView style="@style/sound_sty_rightarrow"></ImageView>
            </LinearLayout>

            <!-- For SPDIF OUTPUT -->
            <LinearLayout
                android:id="@+id/linearlayout_sound_spdifoutput"
                style="@style/sound_sty_combo_btn">
                <ImageView style="@style/sound_sty_leftarrow"></ImageView>
                <TextView
                    style="@style/sound_sty_combo_name"
                    android:text="@string/str_sound_spdifoutput" />
                <TextView style="@style/sound_sty_combo_indicator" />
                <ImageView style="@style/sound_sty_rightarrow"></ImageView>
            </LinearLayout>

            <!-- For Separate Hearing -->
            <LinearLayout
                android:id="@+id/linearlayout_sound_separatehear"
                style="@style/button_style">
                <TextView
                    style="@style/button_textview_style"
                    android:text="@string/str_sound_separatehear" />
            </LinearLayout>
        </LinearLayout>
        <!--
    </com.mstar.tv.tvplayer.ui.component.CycleScrollView>
    -->

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="1dp"
        android:layout_height="550dp"
        android:layout_weight="1"
        android:layout_marginTop="20dp">

        <LinearLayout
            style="@style/pic_mode_sty_combo_btn">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_gravity="center_vertical"
                android:src="@mipmap/point"/>
            <TextView
                style="@style/pic_mode_sty_combo_indicator"
                android:text="标准"/>
        </LinearLayout>
        <LinearLayout
            style="@style/pic_mode_sty_combo_btn">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_gravity="center_vertical"
                android:src="@mipmap/point"/>
            <TextView
                style="@style/pic_mode_sty_combo_indicator"
                android:text="50"/>
        </LinearLayout>
        <LinearLayout
            style="@style/pic_mode_sty_combo_btn">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_gravity="center_vertical"
                android:src="@mipmap/point"/>
            <TextView
                style="@style/pic_mode_sty_combo_indicator"
                android:text="50"/>
        </LinearLayout>
        <LinearLayout
            style="@style/pic_mode_sty_combo_btn">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_gravity="center_vertical"
                android:src="@mipmap/point"/>
            <TextView
                style="@style/pic_mode_sty_combo_indicator"
                android:text="50"/>
        </LinearLayout>
        <LinearLayout
            style="@style/pic_mode_sty_combo_btn">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_gravity="center_vertical"
                android:src="@mipmap/point"/>
            <TextView
                style="@style/pic_mode_sty_combo_indicator"
                android:text="50"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>